Fix About alignment issue

--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -51,7 +51,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px 15px;
+  padding: 10px 20px;
   color: #FFF;
   background-color: #288AE2;
   border: 1px solid #288AE2;
